<?xml version="1.0"?>
<package>
  <name>replay_tool</name>
  <version>0.1.0</version>
  <description>

     replay_tool

  </description>
  <maintainer email="wangrui@gmail.com">wangrui</maintainer>
  <author>wangrui</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>tf</run_depend>


 
</package>
